# pyscaf

./: .coveragerc  .gitignore  AGENT.md  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: README.md  deploy-auto.yml  deploy-production-manual.yml  deploy-production.yml  deploy-test.yml  gitlab-sync.yml  release.yml  reusable-deploy.yml  tests.yml
.specify/memory/: constitution.md
.specify/templates/: constitution-template.md
scripts/: publish.py
src/pyscaf/: __init__.py  cli.py  interactive.py  models.py
src/pyscaf/actions/: __init__.py  git.py  jupyter.py  manager.py  poetry.py
src/pyscaf/actions/core/: README.md  __init__.py  config.toml
src/pyscaf/actions/documentation/: README.md  __init__.py  config.toml
src/pyscaf/actions/documentation/scripts/: parse_doc.py
src/pyscaf/actions/git/: __init__.py  template.gitignore
src/pyscaf/actions/jupyter/: __init__.py  config.toml
src/pyscaf/actions/jupyter-tools/: __init__.py  config.toml
src/pyscaf/actions/jupyter-tools/scripts/: main.py  notebook_to_html.py  notebook_to_pdf.py
src/pyscaf/actions/jupyter_tools/: README.md  __init__.py  config.toml
src/pyscaf/actions/jupyter_tools/jupyter_tools/: __init__.py  config.toml
src/pyscaf/actions/jupyter_tools/jupyter_tools/scripts/: main.py  notebook_to_pdf.py  py_to_notebook.py
src/pyscaf/actions/jupyter_tools/scripts/: main.py  notebook_to_html.py
src/pyscaf/actions/license/: README.md  __init__.py
src/pyscaf/actions/poetry/: README.md  __init__.py
src/pyscaf/actions/semantic-release/: README.md  __init__.py  config.toml
src/pyscaf/actions/test/: README.md  __init__.py  config.toml
src/pyscaf/preference_chain/: __init__.py  __main__.py  chain.py  dependencies.yaml  dependency_loader.py  model.py  new_preference_chain.py  topologic_tree.py  tree_walker.py
src/pyscaf/tools/: toml_merge.py
tests/: README.md  test_actions.py  test_cli.py  test_cli_interactive.py  test_interactive.py  test_manager.py
tests/actions/: README.md  conftest.py  run_tests.py  test_actions.py
tests/actions/core/: test_author.yaml  test_default.yaml  test_name_with_hyphen.yaml
tests/actions/documentation/: test_default.yaml  test_none.yaml  test_pdoc.yaml
tests/actions/git/: test_default.yaml  test_disabled.yaml  test_no_versionning.yaml  test_with_remote.yaml
tests/actions/jupyter/: test_default.yaml  test_enabled.yaml  test_no_jupyter.yaml
tests/actions/jupyter-tools/: test_default.yaml  test_disabled.yaml  test_enabled.yaml
tests/actions/jupyter_tools/: test_default.yaml  test_disabled.yaml  test_enabled.yaml
tests/actions/license/: test_apache.yaml  test_bsd.yaml  test_default.yaml  test_gpl.yaml  test_mpl.yaml  test_unlicense.yaml
tests/actions/semantic-release/: test_custom_project_name.yaml  test_default.yaml  test_disabled.yaml  test_gitlab.yaml  test_no_versionning.yaml
tests/actions/test/: test_default.yaml  test_enabled.yaml  test_no_testing.yaml  test_with_git.yaml
tests/core/preference_chain/: README.md  test_execution_order.py  test_preference_chain.py
tests/core/preference_chain/test_data/: __init__.py  complex.yaml  complex_circular.yaml  multiple_roots.yaml  preference_after.yaml
tests/preference_chain/: __init__.py  test_execution_order.py  test_preference_chain.py
tests/preference_chain/test_data/: circular.yaml  complex_example.yaml  diamond.yaml  diamond_example.yaml  simple_example.yaml  simple_linear.yaml  single.yaml
tests/tools/: test_toml_merge.py
