[project]
name = "pyscaf"
version = "0.1.0"
description = "A python scaffolder with quarto and other utilities out-of-the-box"
authors = [
    {name = "guilhem.heinrich",email = "guilhem.heinrich@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.scripts]
pyscaf = "pyscaf.cli:main"

[tool.poetry]
name = "pyscaf"
version = "0.1.0"
description = "A python scaffolder with quarto and other utilities out-of-the-box"
authors = ["guilhem.heinrich <guilhem.heinrich@gmail.com>"]
readme = "README.md"
packages = [{include = "pyscaf", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
click = ">=8.1.0"
rich = ">=13.0.0"
questionary = ">=2.0.0"
pydantic = ">=2.0.0"
jinja2 = ">=3.0.0"

[tool.poetry.scripts]
pyscaf = "pyscaf.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
